--- a/frontend/src/styles/_base.scss
+++ b/frontend/src/styles/_base.scss
@@ -233,7 +233,7 @@ button {
 
     margin-top: -10rem;
     max-width: 110rem;
-    padding: 2rem;
+    padding: 6rem 2rem;
     width: 100%;
     gap: 1rem;
   }
